force-app/main/default/objects/Financial__c/Financial__c.object-meta.xml
<CustomObject>
    <label>Financial</label>
    <nameField>
        <displayFormat>F{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>