force-app/main/default/objects/Financial__c/fields/Current_Assets__c.field-meta.xml
<CustomField>
    <fullName>Current_Assets__c</fullName>
    <label>Current Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>