force-app/main/default/objects/Financial__c/fields/Current_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Current_Ratio__c</fullName>
    <formula>Current_Assets__c / Current_Liabilities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>