force-app/main/default/objects/Financial__c/fields/Days_Cash_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Days_Cash_On_Hand__c</fullName>
    <formula>((Current_Assets__c -  Stock__c) - ( Current_Liabilities__c ))/ ((Total_Expenses__c -  Depreciation__c )/365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Cash On Hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>