force-app/main/default/objects/Financial__c/fields/Days_Cover_By_Reserve_Image__c.field-meta.xml
<CustomField>
    <fullName>Days_Cover_By_Reserve_Image__c</fullName>
    <formula>IMAGE(
CASE(1, IF( Days_Cover_By_Reserve__c &lt; 90,1,0),   $Setup.Icons__c.Red__c ,
IF(AND(Days_Cover_By_Reserve__c  &gt;= 90, Days_Cover_By_Reserve__c &lt; 180) , 1, 0), $Setup.Icons__c.Orange__c,
IF(Days_Cover_By_Reserve__c &gt;= 180,1,0),  $Setup.Icons__c.Green__c,
&quot;None&quot;),&quot;&quot;)</formula>
    <label>Days Cover By Reserve</label>
    <type>Text</type>
</CustomField>