force-app/main/default/objects/Financial__c/fields/Days_Covered_by_Equity__c.field-meta.xml
<CustomField>
    <fullName>Days_Covered_by_Equity__c</fullName>
    <formula>Equity__c / ((Total_Expenses__c- Depreciation__c )/ 365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Covered by Equity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>