force-app/main/default/objects/Financial__c/fields/Days_Covered_by_Operating_Reserves__c.field-meta.xml
<CustomField>
    <fullName>Days_Covered_by_Operating_Reserves__c</fullName>
    <formula>(((Current_Assets__c + Term_Deposits__c) - Current_Liabilities__c ) -( Stock__c))/ ((Total_Expenses__c -  Depreciation__c )/365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Covered by Operating Reserves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>