force-app/main/default/objects/Financial__c/fields/Days_Covered_by_Operating_Reserves_Image__c.field-meta.xml
<CustomField>
    <fullName>Days_Covered_by_Operating_Reserves_Image__c</fullName>
    <formula>IMAGE(
CASE(1, IF(  Days_Covered_by_Operating_Reserves__c  &lt; 30,1,0),   $Setup.Icons__c.Red__c ,
IF(AND( Days_Covered_by_Operating_Reserves__c  &gt;= 30,  Days_Covered_by_Operating_Reserves__c  &lt; 90) , 1, 0), $Setup.Icons__c.Orange__c,
IF( Days_Covered_by_Operating_Reserves__c  &gt;= 90,1,0),  $Setup.Icons__c.Green__c,
&quot;None&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Covered by Operating Reserves</label>
    <type>Text</type>
</CustomField>