force-app/main/default/objects/Financial__c/fields/Donations_Received__c.field-meta.xml
<CustomField>
    <fullName>Donations_Received__c</fullName>
    <label>Donations Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>