force-app/main/default/objects/Financial__c/fields/Equity_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Equity_Ratio__c</fullName>
    <formula>Equity__c /  Total_Assets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equity %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>