force-app/main/default/objects/Financial__c/fields/Income_From_Sponsors_Donations__c.field-meta.xml
<CustomField>
    <fullName>Income_From_Sponsors_Donations__c</fullName>
    <formula>(Donations_Received__c + Sponsorship_Received__c)/ Total_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Income From Sponsors/Donations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>