force-app/main/default/objects/Financial__c/fields/Income_From_Sport_NZ__c.field-meta.xml
<CustomField>
    <fullName>Income_From_Sport_NZ__c</fullName>
    <formula>Sport_NZ_Investment__c / Total_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Income From Sport NZ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>