force-app/main/default/objects/Financial__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Partner__r.Name &amp; &quot; - &quot; &amp;

if(month( Year_Ending__c ) = 12,

text(year(Year_Ending__c )),

text(year(Year_Ending__c)-1) &amp; &quot;/&quot; &amp; right(text(year(Year_Ending__c)),2))</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>