force-app/main/default/objects/Financial__c/fields/Sponsorship_Received__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Received__c</fullName>
    <label>Sponsorship Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>