force-app/main/default/objects/Financial__c/fields/Sport_NZ_Investment__c.field-meta.xml
<CustomField>
    <fullName>Sport_NZ_Investment__c</fullName>
    <label>Sport NZ Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>