force-app/main/default/objects/Financial__c/fields/Surplus_Deficit__c.field-meta.xml
<CustomField>
    <fullName>Surplus_Deficit__c</fullName>
    <formula>Total_Revenue__c - Total_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surplus / Deficit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>