force-app/main/default/objects/Financial__c/fields/Surplus_Deficit_of_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Surplus_Deficit_of_Revenue__c</fullName>
    <formula>Surplus_Deficit__c / Total_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surplus/Deficit % of Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>