force-app/main/default/objects/Financial__c/fields/Term_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Term_Deposits__c</fullName>
    <label>Term Deposits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>