force-app/main/default/objects/Financial__c/fields/Year_Ending__c.field-meta.xml
<CustomField>
    <fullName>Year_Ending__c</fullName>
    <label>Year Ending</label>
    <type>Date</type>
</CustomField>